--- a/index.html
+++ b/index.html
@@ -1,24 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <!--设置网页的标题-->
-    <title>Leishenerzi's Blog</title>
-    <!--设置文档编码为UTF-8-->
-    <meta charset="utf-8" />
-    <!--设置网页视口为不可放大-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--设置网页作者-->
-    <meta name="author" content="Leishenerzi" />
-    <!--设置网页描述-->
-    <meta name="description" content="Leishenerzi's Blog" />
-    <!--设置网页关键字-->
-    <meta name="keywords" content="Blog" />
-    <!--设置文档作者联系方式-->
-    <address id="address" class="address">
-      Written by Leishenerzi@outlook.com
-    </address>
-    <!--链接CSS文档-->
-    <link rel="stylesheet" href="HomePage.css">
+    <meta http-equiv="refresh" content="5; url=https:/Leishenerzi.github.io/HomePage/HomePage.html">
   </head>
   <body>
   </body>
