--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https:/Leishenerzi.github.io/HomePage/HomePage.html">
+    <meta charset="utf-8" />
+    <script>
+        setTimeout(function() {
+            window.location.href = "https://Leishenerzi.github.io/HomePage/HomePage.html";
+        }, 0);
+    </script>
   </head>
   <body>
   </body>
